crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_classes_unreferenced_class_flagged.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=nursery/noUnusedClasses '<TEMP_DIR>/no_unused_classes_unreferenced_class_flagged'
```

## `App.jsx`

```jsx
import "./styles.css";
export default () => <div className="used primary" />;

```

## `styles.css`

```css
.used {
  color: green;
}
.orphan {
  color: red;
}
.primary {
  color: blue;
}
.ghost {
  opacity: 0.5;
}
```

# Emitted Messages

```block
styles.css:1:25 lint/nursery/noUnusedClasses ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class orphan is not referenced in any HTML or JSX file.
  
  > 1 │ .used { color: green; } .orphan { color: red; } .primary { color: blue; } .ghost { opacity: 0.5; }
      │                         ^^^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
styles.css:1:75 lint/nursery/noUnusedClasses ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class ghost is not referenced in any HTML or JSX file.
  
  > 1 │ .used { color: green; } .orphan { color: red; } .primary { color: blue; } .ghost { opacity: 0.5; }
      │                                                                           ^^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 infos.
```
