crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_styles_component_hierarchy_child_imports_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `App.jsx`

```jsx
import Button from "./Button.jsx";
export default () => <div><Button /></div>;

```

## `Button.jsx`

```jsx
import "./button.css";
export default () => <button className="btn">Click</button>;

```

## `button.css`

```css
.btn {
  padding: 8px;
}
.unused {
  margin: 0;
}
```

# Emitted Messages

```block
button.css:1:24 lint/nursery/noUnusedStyles ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class unused is not referenced in any HTML or JSX file.
  
  > 1 │ .btn { padding: 8px; } .unused { margin: 0; }
      │                        ^^^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 1 info.
```
