crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_styles_dynamic_classname_not_collected.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `App.jsx`

```jsx
import "./styles.css";
export default () => <div className={"button"} />;

```

## `styles.css`

```css
.button {
  color: blue;
}
```

# Emitted Messages

```block
styles.css:1:1 lint/nursery/noUnusedStyles ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class button is not referenced in any HTML or JSX file.
  
  > 1 │ .button { color: blue; }
      │ ^^^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 info.
```
