crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_styles_html_consumer.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "html": { "experimentalFullSupportEnabled": true } }
```

## `index.html`

```html
<!DOCTYPE html>
<html>
<head><link rel="stylesheet" href="./styles.css" /></head>
<body><h1 class="hero">Hello</h1></body>
</html>

```

## `styles.css`

```css
.hero {
  font-size: 2rem;
}
```

# Emitted Messages

```block
styles.css:1:1 lint/nursery/noUnusedStyles ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class hero is not referenced in any HTML or JSX file.
  
  > 1 │ .hero { font-size: 2rem; }
      │ ^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule is still being actively worked on, so it may be missing features or have rough edges. Visit https://github.com/biomejs/biome/issues/9156 for more information or to report possible bugs.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 1 info.
```
