crates/biome_cli/tests/snapshots/main_cases_handle_css_files/no_unused_styles_mixed_html_jsx_consumers.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "html": { "experimentalFullSupportEnabled": true } }
```

## `App.jsx`

```jsx
import "./styles.css";
export default () => <div className="header" />;

```

## `index.html`

```html
<link rel="stylesheet" href="./styles.css" /><footer class="footer">end</footer>
```

## `styles.css`

```css
.header {
  font-weight: bold;
}
.footer {
  font-size: 0.8rem;
}
```

# Emitted Messages

```block
styles.css:1:32 lint/nursery/noUnusedStyles ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The CSS class footer is not referenced in any HTML or JSX file.
  
  > 1 │ .header { font-weight: bold; } .footer { font-size: 0.8rem; }
      │                                ^^^^^^^
  
  i Unused CSS classes add dead weight to your stylesheet, increase bundle size, and make the codebase harder to maintain.
  
  i Either use this class somewhere or remove the selector.
  
  i This rule belongs to the nursery group, which means it is not yet stable and may change in the future. Visit https://biomejs.dev/linter/#nursery for more information.
  

```

```block
Checked 4 files in <TIME>. No fixes applied.
Found 1 info.
```
