crates/biome_cli/tests/snapshots/main_cases_handle_css_files/should_format_write_files_by_when_opt_in.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `input.css`

```css
html {
}
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
